@@ -23,6 +23,5 @@
 
 extern void inferior_event_handler (enum inferior_event_type event_type, 
 				    void* client_data);
-extern void inferior_event_handler_wrapper (void *client_data);
 
 #endif /* #ifndef INF_LOOP_H */
